# Jarvis-2.0

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
app/: globals.css  page.tsx
app/api/analyze/: route.ts
app/api/chat/: route.ts
app/api/debug/: route.ts
app/api/search/: route.ts
app/login/: page.tsx
components/: FileUpload.tsx
hooks/: useChat.ts  useFileUpload.ts  useVoice.ts
lib/: fileUtils.ts  openrouter.ts  searchTool.ts  tauriStorage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
